# readmetoo

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: cli.rs  config.rs  error.rs  main.rs  pager.rs  renderer.rs  theme.rs
